--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise 01: Normalized Movement</title>
+    <title>Devil Escape</title>
 </head>
 <body>
     <script src="./lib/phaser.js"></script>
-    <script src="./src/Menu.js"></script>
-    <script src="./src/Play.js"></script>
+    <script src="./src/scenes/Menu.js"></script>
+    <script src="./src/scenes/Play.js"></script>
     <script src="./src/main.js"></script>
 </body>
 </html>
